# RytScan

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/rytscan-cli/: Cargo.toml
crates/rytscan-cli/src/: main.rs
crates/rytscan-core/: Cargo.toml
crates/rytscan-core/src/: lib.rs  report.rs  rules.rs  scanner.rs
docs/: WAVE6_ROADMAP.md  architecture.md  prd.md
fixtures/clean-token/src/: lib.rs
fixtures/vulnerable-vault/src/: lib.rs
