[workspace]
members = ["crates/rytscan-core", "crates/rytscan-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["BreachDirect"]
repository = "https://github.com/BreachDirect/RytScan"

[workspace.dependencies]
rytscan-core = { path = "crates/rytscan-core" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"
anyhow = "1.0"
thiserror = "2.0"
