[package]
name = "rytscan-cli"
description = "CLI for scanning Soroban contracts with RytScan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rytscan"
path = "src/main.rs"

[dependencies]
rytscan-core = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
