[package]
name = "rytscan-core"
description = "Soroban smart contract security rule engine for RytScan"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.14"
